--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 examples/ws/web/web
 examples/ws/client/client
 examples/.DS_Store
+examples/.DS_Store
+examples/.DS_Store
+examples/ws/.DS_Store
+examples/.DS_Store
